feat: fix typo in the description

--- a/Notebooks/01_bikeshare_data_exploration.ipynb
+++ b/Notebooks/01_bikeshare_data_exploration.ipynb
@@ -2,18 +2,18 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "1f8db867",
+   "id": "183ea574",
    "metadata": {},
    "source": [
     "# Bike Share Data Exploration\n",
     "\n",
-    "For the first part of the assignment, I decided to use Jupyter notebooks. It is my first time working with this dataset, therefore I need to get familiar with the data before starting any analysis. \n",
+    "For the first part, I decided to use Jupyter notebooks. It is my first time working with this dataset, therefore I need to get familiar with the data before starting any analysis. \n",
     "Jupyter Notebook are a great tool for data exploration and visualization. However, I would prefer not to use them when building production systems."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "8404bdc7",
+   "id": "421ac842",
    "metadata": {},
    "source": [
     "## 1. Setup and Imports"
@@ -22,7 +22,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "a7e8c2d0",
+   "id": "e3f488b8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "42cb2d71",
+   "id": "ed96e7dd",
    "metadata": {},
    "source": [
     "## 2. Loading the Trip Data\n",
@@ -43,7 +43,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "e9410fbf",
+   "id": "e1789a31",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c4e49a70",
+   "id": "5c9ff84f",
    "metadata": {},
    "source": [
     "I will visualize the first five rows in the data frame with the `head()` method."
@@ -61,7 +61,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "5a0f48cd",
+   "id": "698c86d7",
    "metadata": {},
    "outputs": [
     {
@@ -245,7 +245,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9435c5e2",
+   "id": "492e325a",
    "metadata": {},
    "source": [
     "## 3. Exploring the Trip Data"
@@ -253,7 +253,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "541cb196",
+   "id": "3d553fb7",
    "metadata": {},
    "source": [
     "I will use the method `info()` to get more information about the columns."
@@ -262,7 +262,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "83059f59",
+   "id": "212378c7",
    "metadata": {},
    "outputs": [
     {
@@ -300,7 +300,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e1f19c2a",
+   "id": "08a5a5c6",
    "metadata": {},
    "source": [
     "I can see that we have over two million entries in this particular month.\n",
@@ -313,7 +313,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "216e05a6",
+   "id": "dadaa6c5",
    "metadata": {},
    "outputs": [
     {
@@ -501,7 +501,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ce3b0c63",
+   "id": "1b8e05a6",
    "metadata": {},
    "source": [
     "The **trip duration** is interesting because I can see that the shortest trips were 61 seconds and the longest was 2245701 seconds. These numbers are very spread out and even unrealistic, it seems like we have some outliers. I will need to address that.\n",
@@ -514,7 +514,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "f86533bb",
+   "id": "4cfd4741",
    "metadata": {},
    "outputs": [
     {
@@ -701,7 +701,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8f035191",
+   "id": "65d7ee19",
    "metadata": {},
    "source": [
     "The values for the count are the same for each column, which means that there are no missing values."
@@ -709,7 +709,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "eb3c80aa",
+   "id": "ef04cf2c",
    "metadata": {},
    "source": [
     "## 4. Data Clean-up\n",
@@ -720,7 +720,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "82f02764",
+   "id": "efc43607",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -730,7 +730,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "12e333aa",
+   "id": "9831b542",
    "metadata": {},
    "source": [
     "Second, there are several columns that can be converted to categorical values. For example, the **start and end station names** are good candidates to be stored as **categorical data** (There are only 1144 unique values). \n",
@@ -741,7 +741,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "9efa94e2",
+   "id": "4973f878",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -752,7 +752,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "ed054ed7",
+   "id": "70834f63",
    "metadata": {},
    "source": [
     "If I run again the same analysis we can see that now the data types are more align with the content of the columns and also the memory usage was reduced with becomes very important when processing millions of data points."
@@ -761,7 +761,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "c784ef3e",
+   "id": "451aafe0",
    "metadata": {},
    "outputs": [
     {
@@ -948,7 +948,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "08066435",
+   "id": "ba5b5af3",
    "metadata": {},
    "source": [
     "One last thing I could do before moving on to the next part is to set the minimum age for the birth column. I am afraid of modifying the other columns since it requires domain knowledge to confidently do feature engineering."
@@ -957,7 +957,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "cc8dfaa8",
+   "id": "1d692636",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -968,7 +968,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "ecf801b3",
+   "id": "9a206992",
    "metadata": {},
    "outputs": [
     {
@@ -1138,7 +1138,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "68844c65",
+   "id": "9ae7194e",
    "metadata": {},
    "source": [
     "For example the **tripduration** sounds very unrealistic because it translates to 623 hours. Probably someone forgot to lock the bike."
@@ -1146,7 +1146,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dc75823e",
+   "id": "6232a11f",
    "metadata": {},
    "source": [
     "## 5. Save intermediate results\n",
@@ -1157,7 +1157,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "383f6fa4",
+   "id": "a1759e6b",
    "metadata": {},
    "outputs": [],
    "source": [
