--- a/Notebooks/02_weather_data_exploration.ipynb
+++ b/Notebooks/02_weather_data_exploration.ipynb
@@ -2,17 +2,17 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "1e3c18af",
+   "id": "ca31356d",
    "metadata": {},
    "source": [
     "# Weather Data Exploration\n",
     "\n",
-    "For the second part of the assignment, I will load ana analize the weather data for the same month."
+    "In this notebook, I will load and analyze the weather data for the same month."
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "4c139f93",
+   "id": "f19703a1",
    "metadata": {},
    "source": [
     "## 1. Setup and Imports"
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "0fdfd550",
+   "id": "53b757f3",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c019cdf0",
+   "id": "10e008c9",
    "metadata": {},
    "source": [
     "## 2. Get Weather Information\n",
@@ -43,7 +43,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "a7d9f6d2",
+   "id": "608af9e6",
    "metadata": {},
    "outputs": [
     {
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2f392657",
+   "id": "48e4908d",
    "metadata": {},
    "source": [
     "## 3. Exploring the Weather Data"
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "76787e7b",
+   "id": "3dcf159d",
    "metadata": {},
    "source": [
     "Convert dictionary to a DataFrame and use the method info() to get more information about the columns."
@@ -82,7 +82,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "d8f6f15f",
+   "id": "a949972a",
    "metadata": {},
    "outputs": [
     {
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fac9aa99",
+   "id": "fb90dd14",
    "metadata": {},
    "source": [
     "## 4. Data Clean-up"
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "54b9cb97",
+   "id": "2739b90b",
    "metadata": {},
    "source": [
     "There is a lot of information in this data frame so I decided to get rid of several columns and just keep the most interestng infromation."
@@ -158,7 +158,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "aca5357e",
+   "id": "1df39171",
    "metadata": {},
    "outputs": [
     {
@@ -368,7 +368,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "c0c34154",
+   "id": "768506e7",
    "metadata": {},
    "outputs": [
     {
@@ -510,7 +510,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b695ab24",
+   "id": "ebcb29df",
    "metadata": {},
    "source": [
     "The first thing I can do here is to convert datetime from object to datetime value."
@@ -519,7 +519,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "a9e2bc90",
+   "id": "87dc95b4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -528,7 +528,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dd9e2057",
+   "id": "c66bd685",
    "metadata": {},
    "source": [
     "Second, to address the missing values from the `windgust` column I decided to replace the missing values with the mean. "
@@ -537,7 +537,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "de4347c2",
+   "id": "cc61c2f6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -547,7 +547,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "87e167f8",
+   "id": "af69a933",
    "metadata": {},
    "outputs": [
     {
@@ -756,7 +756,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "fa2ac307",
+   "id": "72315f0c",
    "metadata": {},
    "outputs": [
     {
@@ -898,7 +898,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "99443124",
+   "id": "187370bc",
    "metadata": {},
    "source": [
     "## 5. Save intermediate results\n",
@@ -909,7 +909,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "1347e44b",
+   "id": "d3d204a1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -919,7 +919,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "23164419",
+   "id": "e793c3fd",
    "metadata": {},
    "outputs": [],
    "source": []
