docs: add next steps to the project

--- a/notebooks/04_analysis_and_visualization.ipynb
+++ b/notebooks/04_analysis_and_visualization.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "bba5eca9",
+   "id": "c6ed1798",
    "metadata": {},
    "source": [
     "# Analysis & Visualization\n",
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "79269e25",
+   "id": "0a53c686",
    "metadata": {},
    "source": [
     "## 1. Setup and Imports"
@@ -21,7 +21,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "5b843d18",
+   "id": "105262da",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b8babaf9",
+   "id": "c8f8cfc2",
    "metadata": {},
    "source": [
     "## 2. Load Previous Results\n",
@@ -44,7 +44,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "51e1afc3",
+   "id": "8f2a41b1",
    "metadata": {},
    "outputs": [
     {
@@ -268,7 +268,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a8032bc5",
+   "id": "d0ea6ac4",
    "metadata": {},
    "source": [
     "## 3. Analysis & Visualization\n",
@@ -281,7 +281,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "b27da17f",
+   "id": "805e9773",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -295,7 +295,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "4b332f5c",
+   "id": "59a621be",
    "metadata": {},
    "outputs": [
     {
@@ -319,7 +319,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3af25c46",
+   "id": "81a2287d",
    "metadata": {},
    "source": [
     "### Rides by Day\n",
@@ -330,7 +330,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "6fdd94eb",
+   "id": "54875873",
    "metadata": {},
    "outputs": [
     {
@@ -355,7 +355,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c42f9a15",
+   "id": "5940b46c",
    "metadata": {},
    "source": [
     "### Precipitation"
@@ -364,7 +364,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "43e2ceba",
+   "id": "6ca9aeeb",
    "metadata": {},
    "outputs": [
     {
@@ -389,7 +389,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5fd2b874",
+   "id": "da47eede",
    "metadata": {},
    "source": [
     "### Wind"
@@ -398,7 +398,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "4be411ea",
+   "id": "873b7aa5",
    "metadata": {},
    "outputs": [
     {
@@ -421,7 +421,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "71b910d0",
+   "id": "f0b4c23c",
    "metadata": {},
    "source": [
     "### Temperatures for each day"
@@ -430,7 +430,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "5eccdf96",
+   "id": "e546bc35",
    "metadata": {},
    "outputs": [
     {
@@ -459,12 +459,28 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "365f2626",
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "0faf12b4",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "# Next Steps\n",
+    "\n",
+    "After doing the initial data exploration these are the next steps:\n",
+    "\n",
+    "1. Move away from jupyter notebooks and start writing scripts with testable functions.\n",
+    "2. Create a DAG to execute the processing pipeline.\n",
+    "3. Create a Database to store intermediate results.\n",
+    "4. Write scripts for data validation and visualization.\n",
+    "\n",
+    "To do pre-processing at scale, we need good tools. I recently came across TensorFlow Transform and it seems to be one of the best tools available today.\n",
+    "\n",
+    "First off, it takes Training Data, and it's going to process it. The result can be deployed into the Serving System. In the middle, there's a PIPELINE that is used, and there is METADATA that forms a key role in organizing and managing the artifacts that are produced as data is transformed. One of the reasons that's important, is because, we want to understand the lineage or provenance of those artifacts, and be able to connect them and find the chain of operations that generated each of them.\n",
+    "\n",
+    "In the graph below, we have a typical ML Pipeline. The input would be our Training Data, which is the input data into the system that forms an artifact. For this project that would be out trip data and wheather data in raw format. We give that to Transform and it transforms our data. Transform would perform the steps described in notebooks 01, 02 and 03. It's going to take our raw data and move it into the form that we're going to use for analysis. That can be given to a Trainer which would train a model that we can use with future data. Transform and Trainer here are both components in an ML pipeline, specifically a TFX ML pipeline. The trained model, which is also an artifac, can be delivered to the serving system or whatever system we're using, where it can be used to run inference.\n",
+    "\n",
+    "![title](ml_transform.png)"
+   ]
   }
  ],
  "metadata": {
